added examples for slf4j, log4j, logback

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,36 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.7</version>
 		</dependency>
+
+		<!-- uncomment ONE of the following implementation -->
+		<!-- Simple implementation -->
+		<!--<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.7</version>
+		</dependency>-->
+
+		<!-- Java logging implementation -->
+		<!--<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.7.7</version>
+		</dependency>-->
+
+		<!-- Log4j implementation -->
+		<!--<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.7</version>
+		</dependency>-->
+
+		<!-- Logback implementation -->
+		<!--<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.2</version>
+		</dependency>-->
+
 	</dependencies>
 
 	<build>
